--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -150,7 +150,8 @@
 
 <div id="overlay"></div><div id="popup">Loading...</div>
 
-<script type="text/javascript" src="/static/json-rpc.js"></script>
+<script type="text/javascript" src="/static/fetch.js"></script>
+<script type="text/javascript" src="/static/rest.js"></script>
 <script type="text/javascript" src="/static/dataclasses.js"></script>
 <script type="text/javascript" src="/static/jsviews.min.js"></script>
 <script type="text/javascript" src="/static/submit.js"></script>
