--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -31,10 +31,10 @@
 
 {% if (current_user) %}
 <div class="action">
-    <button onclick='call("reset_dataset");'>Reset</button>
-    <button onclick='call("hard_reset_dataset");'>Hard Reset</button>
-    <button onclick='call("suspend_dataset");'>Suspend</button>
-    <button onclick='call("truncate_dataset");'>Truncate</button>
+    <button onclick='set_dataset_status("{{ dataset_id }}", "reset", "{{ passkey }}", ["idle", "waiting", "queued", "processing", "reset", "failed", "suspended"]);'>Reset</button>
+    <button onclick='set_dataset_status("{{ dataset_id }}", "reset", "{{ passkey }}");'>Hard Reset</button>
+    <button onclick='set_dataset_status("{{ dataset_id }}", "suspended", "{{ passkey }}");'>Suspend</button>
+    <button onclick='set_dataset_status("{{ dataset_id }}", "truncated", "{{ passkey }}", propagate=false);'>Truncate</button>
 </div>
 {% end %}
 
@@ -107,15 +107,8 @@
 {% block body_scripts %}
 
 {% if (current_user) %}
-<script type="text/javascript" src="/static/json-rpc.js"></script>
-<script type="text/javascript">
-    var dataset_id = "{{ dataset_id }}";
-    function call(func_name){
-        RPCclient(func_name, {passkey: "{{ passkey }}", dataset_id:dataset_id }, callback=function(return_data){
-            location.reload(true);
-        });
-    };
-</script>
+<script type="text/javascript" src="/static/fetch.js"></script>
+<script type="text/javascript" src="/static/rest.js"></script>
 {% end %}
 
 {% end %}
