--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -30,9 +30,9 @@
 
 {% if (current_user) %}
 <div style="padding:10px;">
-    <a href='javascript:call("reset_task");'>Reset</a>
-    <a href='javascript:call("resume_task");'>Resume</a>
-    <a href='javascript:call("suspend_task");'>Suspend</a>
+    <a href='javascript:set_tasks_and_jobs_status(["{{ task['task_id'] }}"], "reset", "{{ passkey }}");'>Reset</a></td>
+    <a href='javascript:set_tasks_and_jobs_status(["{{ task['task_id'] }}"], "processing", "{{ passkey }}");'>Resume</a></td>
+    <a href='javascript:set_tasks_status(["{{ task['task_id'] }}"], "suspended", "{{ passkey }}");'>Suspend</a></td>
 </div>
 {% end %}
 
@@ -50,15 +50,8 @@
 {% block body_scripts %}
 
 {% if (current_user) %}
-<script type="text/javascript" src="/static/json-rpc.js"></script>
-<script type="text/javascript">
-    var task = "{{ task['task_id'] }}";
-    function call(func_name){
-        RPCclient(func_name, {passkey: "{{ passkey }}", task:task }, callback=function(return_data){
-            location.reload(true);
-        });
-    };
-</script>
+<script type="text/javascript" src="/static/fetch.js"></script>
+<script type="text/javascript" src="/static/rest.js"></script>
 {% end %}
 
 {% end %}
