fix some fetch calls

--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -150,7 +150,7 @@
 
 <div id="overlay"></div><div id="popup">Loading...</div>
 
-<script type="text/javascript" src="/static/fetch.js"></script>
+<script src="/static/fetch.js"></script>
 <script type="text/javascript" src="/static/rest.js"></script>
 <script type="text/javascript" src="/static/dataclasses.js"></script>
 <script type="text/javascript" src="/static/jsviews.min.js"></script>
