--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -53,6 +53,7 @@
         {% else %}
         Number of jobs:
         <input id="number_jobs" value="1" min="1" step="1", type="number">
+        Group:
         <select id="group">
             {% for g in groups %}
                 <option value="{{ g }}">{{ g }}</option>
@@ -77,14 +78,15 @@ var passkey = '{{ passkey }}';
 var edit = {{ json_encode(edit) }};
 var dataset_id = '{{ dataset_id }}';
 var rest_api = 'https://iceprod2-api.icecube.wisc.edu';
-function get_num_tasks(config_str){
-    var config = null;
+function parse_json(config){
     try {
-        config = JSON.parse(config_str);
+        return JSON.parse(config);
     } catch (err) {
         $('#error').text(err);
-        return -1;
+        return null;
     }
+}
+function get_num_tasks(config){
     if (!("tasks" in config)) {
         $('#error').text("'tasks' not in config");
         return -1;
@@ -104,7 +106,9 @@ async function submit() {
         return;
     }
     var group = $("#group").val();
-    var submit_data = $("#submit_box").val();
+    var submit_data = parse_json($("#submit_box").val());
+    if (submit_data == null)
+        return;
     var ntasks = get_num_tasks(submit_data) * njobs;
     if (ntasks < 0)
         return;
