--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -45,7 +45,7 @@
 
 {% block body %}
 <div id="submit_area">
-    <textarea id="submit_box" style="min-height: 400px">{{ json_encode(config) }}</textarea>
+    <textarea id="submit_box" style="min-height: 400px">{{ json_encode(config, indent=2) }}</textarea>
     <textarea id="description" placeholder="Description">{{ description }}</textarea>
     <div class="submit_contents">
         {% if dataset_id %}
