get the reset, resume, suspend buttons working. fix a few more web templates

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}IceProd - Dataset {{ dataset_num }} Details{% end %}
+{% block title %}Dataset {{ dataset_num }} - IceProd{% end %}
 
 {% block description %}{{ dataset["description"] }}{% end %}
 
