--- a/iceprod/server/data/www_templates/job_detail.html
+++ b/iceprod/server/data/www_templates/job_detail.html
@@ -2,7 +2,7 @@
 
 {% autoescape None %}
 
-{% block title %}{{ escape(job['job_id']) }} - IceProd{% end %}
+{% block title %}Job {{ job['job_index'] }}, Dataset {{ dataset['dataset'] }} - IceProd{% end %}
 
 {% block page_title %}Job Details{% end %}
 
@@ -25,9 +25,9 @@
 
 {% if (current_user) %}
 <div class="action">
-    <button onclick='set_jobs_status(["{{ job["job_id"] }}"], "reset", "{{ passkey }}", ["idle", "waiting", "queued", "processing", "reset", "failed", "suspended"]);'>Reset</button>
-    <button onclick='set_jobs_status(["{{ job["job_id"] }}"], "reset", "{{ passkey }}");'>Hard Reset</button>
-    <button onclick='set_jobs_status(["{{ job["job_id"] }}"], "suspended", "{{ passkey }}");'>Suspend</button>
+    <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "processing", "{{ passkey }}", ["idle", "waiting", "queued", "processing", "reset", "failed", "suspended"]);'>Reset</button>
+    <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "processing", "{{ passkey }}");'>Hard Reset</button>
+    <button onclick='set_jobs_status(dataset_id, ["{{ job["job_id"] }}"], "suspended", "{{ passkey }}");'>Suspend</button>
 </div>
 {% end %}
 
@@ -46,7 +46,7 @@
         </tr>
         {% for task in job['tasks'] %}
         <tr>
-            <td><a href="/task/{{ url_escape(task['task_id']) }}">{{ task['name'] }}</a></td>
+            <td><a href="/dataset/{{ url_escape(job['dataset_id']) }}/task/{{ url_escape(task['task_id']) }}">{{ task['name'] }}</a></td>
             <td>{{ 'GPU' if 'gpu' in task['requirements'] else 'CPU' }}</td>
             <td>{{ task['status'] }}</td>
             <td>{{ task['failures'] }}</td>
@@ -64,6 +64,9 @@
 {% if (current_user) %}
 <script type="text/javascript" src="/static/fetch.js"></script>
 <script type="text/javascript" src="/static/rest.js"></script>
+<script>
+var dataset_id = "{{ job['dataset_id'] if job else '' }}";
+</script>
 {% end %}
 
 {% end %}
