--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -92,12 +92,14 @@
             <th>Eff</th>
         </tr>
         {% for t in task_stats %}
+          {% if 'avg_hrs' in task_stats[t] and task_stats[t]['avg_hrs'] and 'stddev_hrs' in task_stats[t] and task_stats[t]['stddev_hrs'] %}
         <tr>
             <td>{{ t }}</td>
             <td>{{ '{:0.2f}'.format(task_stats[t]['avg_hrs']) }} / {{ '{:0.2f}'.format(task_stats[t]['stddev_hrs']) }}</td>
             <td>{{ '{:0.2f}'.format(task_stats[t]['max_hrs']) }} / {{ '{:0.2f}'.format(task_stats[t]['min_hrs']) }}</td>
             <td>{{ '{:d}'.format(int(task_stats[t]['efficiency']*100)) }}%</td>
         </tr>
+          {% end %}
         {% end %}
     </table>
 </div>
