automatically set dataset and parent_id values in config, when submitting a new dataset

--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -113,6 +113,8 @@ async function submit() {
     var ntasks = get_num_tasks(submit_data) * njobs;
     if (ntasks < 0)
         return;
+
+    // create dataset
     var response = await fetch_json('POST', '/datasets',
         {'description': description,
          'jobs_submitted': njobs,
@@ -126,6 +128,15 @@ async function submit() {
         return;
     }
     dataset_id = response['result'].split('/')[2];
+
+    // set dataset number in config
+    response = await fetch_json('GET', '/datasets/' + dataset_id, null, passkey);
+    if (submit_data['dataset']) {
+        submit_data['parent_id'] = submit_data['dataset'];
+    }
+    submit_data['dataset'] = response['dataset'];
+
+    // upload config
     response = await fetch_json('PUT', '/config/' + dataset_id,
         submit_data, passkey
     );
