--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -39,10 +39,12 @@
 </div>
 
 {% for log in logs %}
+    {% if 'data' in log and log['data'] %}
 <div class="logs">
   <p class="log_name"><a href='/dataset/{{ url_escape(task['dataset_id']) }}/log/{{ url_escape(log['log_id']) }}'>{{ escape(log['name']) }}</a></p>
   <div class="log_body">{{ '<br />'.join(map(escape,log['data'].replace('\r','').split('\n')[-40:])) }}</div>
 </div>
+    {% end %}
 {% end %}
 
 {% end %}
