--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -158,6 +158,18 @@ async function update() {
         $('#error').text('error uploading config: '+response['error']);
         return;
     }
+    var name, reqs;
+    for (var i=0;i<submit_data['tasks'].length;i++){
+        name = submit_data['tasks'][i]['name'];
+        reqs = submit_data['tasks'][i]['requirements']
+        response = await fetch_json('PUT', '/datasets/' + dataset_id + '/task_actions/bulk_requirements/' + name,
+            reqs, passkey
+        );
+        if ('error' in response) {
+            $('#error').text('error setting requirements for '+name+': '+response['error']);
+            return;
+        }
+    }
     response = await fetch_json('PUT', '/datasets/' + dataset_id + '/description',
         {'description':description}, passkey
     );
