--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -77,7 +77,7 @@
 <script type="text/javascript" src="/static/jsonlint.js"></script>-->
 <script type="text/javascript">
 var passkey = '{{ passkey }}';
-var orig_config = JSON.parse('{{ json_encode(config) }}');
+var orig_config = {{ json_encode(config) }};
 var edit = {{ json_encode(edit) }};
 var dataset_id = '{{ dataset_id }}';
 function parse_json(config){
