--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -30,8 +30,7 @@
 
 {% if (current_user) %}
 <div class="action">
-    <button onclick='set_tasks_and_jobs_status(dataset_id, ["{{ task['task_id'] }}"], "waiting", "{{ passkey }}");'>Reset</button></td>
-    <button onclick='set_tasks_and_jobs_status(dataset_id, ["{{ task['task_id'] }}"], "reset", "{{ passkey }}");'>Resume</button></td>
+    <button onclick='set_tasks_and_jobs_status(dataset_id, ["{{ task['task_id'] }}"], "reset", "{{ passkey }}");'>Reset</button></td>
     <button onclick='set_tasks_status(dataset_id, ["{{ task['task_id'] }}"], "suspended", "{{ passkey }}");'>Suspend</button></td>
 </div>
 {% end %}
