display task_stats on website

--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -37,6 +37,10 @@
 
 </div>
 
+<div class="task_stats">
+{{ json_encode(task_stats) }}
+</div>
+
 {% for log in logs %}
     {% if 'data' in log and log['data'] %}
 <div class="logs">
