remove dataset and parent from root of config

--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -131,11 +131,13 @@ async function submit() {
     dataset_id = response['result'].split('/')[2];
 
     // set dataset number in config
-    response = await fetch_json('GET', '/datasets/' + dataset_id, null, passkey);
-    if (submit_data['dataset']) {
-        submit_data['parent_id'] = submit_data['dataset'];
-    }
-    submit_data['dataset'] = response['dataset'];
+    //response = await fetch_json('GET', '/datasets/' + dataset_id, null, passkey);
+    //if (submit_data['dataset']) {
+    //    submit_data['parent_id'] = submit_data['dataset'];
+    //}
+    //submit_data['dataset'] = response['dataset'];
+    if ('dataset' in submit_data)
+        delete submit_data['dataset'];
 
     // upload config
     response = await fetch_json('PUT', '/config/' + dataset_id,
