--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -45,12 +45,14 @@
 {% end %}
 
 {% for log in logs %}
-    {% if 'data' in log and log['data'] %}
-<div class="logs">
-  <p class="log_name"><a href='/dataset/{{ url_escape(task['dataset_id']) }}/log/{{ url_escape(log['log_id']) }}'>{{ escape(log['name']) }}</a></p>
-  <div class="log_body">{{ '<br />'.join(map(escape,log['data'].replace('\r','').split('\n')[-40:])) }}</div>
-</div>
+  {% if 'data' in log and log['data'] %}
+  <div class="logs">
+    <p class="log_name"><a href='/dataset/{{ url_escape(task['dataset_id']) }}/log/{{ url_escape(log['log_id']) }}'>{{ escape(log['name']) }}</a></p>
+    {% if log['name'] != 'stdlog' %}
+      <div class="log_body">{{ '<br />'.join(map(escape,log['data'].replace('\r','').split('\n')[-40:])) }}</div>
     {% end %}
+  </div>
+  {% end %}
 {% end %}
 
 {% end %}
